[gd_scene load_steps=16 format=3 uid="uid://ckxf17ocwvyeu"]

[ext_resource type="Script" path="res://Scenes/Radar.gd" id="1_cja4g"]
[ext_resource type="Shader" path="res://Shaders/flash.gdshader" id="2_terbp"]
[ext_resource type="Texture2D" uid="uid://dfgbchegkeif" path="res://Images/Enemies/radar.png" id="2_vrtf5"]
[ext_resource type="Texture2D" uid="uid://bmasqedi0g810" path="res://Images/Enemies/radar arm.png" id="3_6ylvx"]
[ext_resource type="Shader" path="res://Shaders/black_white.gdshader" id="3_7wfee"]
[ext_resource type="Texture2D" uid="uid://cii2jk8nqa3wa" path="res://Images/Enemies/radar wing.png" id="4_0cue0"]
[ext_resource type="Texture2D" uid="uid://hvf2ulj8tj7w" path="res://Images/Enemies/emerald.png" id="4_awv83"]
[ext_resource type="PackedScene" uid="uid://bw4lnil0db42v" path="res://Scenes/status_effects_bar.tscn" id="7_v3i4x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x0v58"]
resource_local_to_scene = true
shader = ExtResource("2_terbp")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d3x1x"]
shader = ExtResource("3_7wfee")
shader_parameter/slider = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w78e"]
size = Vector2(62, 152)

[sub_resource type="Animation" id="Animation_35kg8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lhand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-60, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lhand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rhand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 20)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rhand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, -5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Lwing:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-70, -60)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Lwing:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0872665]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Rwing:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(70, -60)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Rwing:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0872665]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D/emerald:material:shader_parameter/slider")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_8138m"]
resource_name = "boot_up"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/emerald:material:shader_parameter/slider")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_qyoy2"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lhand:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-60, 20), Vector2(-58, 36)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lhand:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.261799, -0.436332]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rhand:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(60, 20), Vector2(58, 36)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rhand:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.261799, 0.436332]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5, -5), Vector2(2.5, 5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Lwing:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-70, -60), Vector2(-74, -45)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Lwing:rotation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0872665, -0.0872665]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Rwing:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(70, -60), Vector2(74, -45)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Rwing:rotation")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pytrv"]
_data = {
"RESET": SubResource("Animation_35kg8"),
"boot_up": SubResource("Animation_8138m"),
"idle": SubResource("Animation_qyoy2")
}

[node name="Radar" type="Area2D"]
scale = Vector2(0.7, 0.7)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_cja4g")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_x0v58")
position = Vector2(2.5, -5)
texture = ExtResource("2_vrtf5")

[node name="emerald" type="Sprite2D" parent="Sprite2D"]
material = SubResource("ShaderMaterial_d3x1x")
position = Vector2(-2.38419e-07, -40)
texture = ExtResource("4_awv83")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_8w78e")

[node name="Rhand" type="Sprite2D" parent="."]
position = Vector2(60, 20)
rotation = 0.261799
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_6ylvx")

[node name="Lhand" type="Sprite2D" parent="."]
position = Vector2(-60, 20)
rotation = -0.261799
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_6ylvx")
flip_h = true

[node name="Rwing" type="Sprite2D" parent="."]
position = Vector2(70, -60)
rotation = -0.0872665
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_0cue0")

[node name="Lwing" type="Sprite2D" parent="."]
position = Vector2(-70, -60)
rotation = 0.0872665
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_0cue0")
flip_h = true

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pytrv")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="hp" type="Label" parent="."]
offset_left = -18.0
offset_top = 85.0
offset_right = 22.0
offset_bottom = 108.0
text = "hp"
horizontal_alignment = 1

[node name="StatusEffectsBar" parent="." instance=ExtResource("7_v3i4x")]
offset_top = 109.857
offset_bottom = 139.857

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
